--- a/my-os/grub/grub.cfg
+++ b/my-os/grub/grub.cfg
@@ -1,7 +1,14 @@
+# I'll set the GRUB menu timeout to 0 seconds.
 set timeout=0
+
+# I want the default menu entry to be the first one.
 set default=0
 
+# Here I define the menu entry for my OS.
 menuentry "my-os" {
+    # I need to load my kernel using the Multiboot protocol.
     multiboot /boot/kernel.bin
+    
+    # Now I'll boot the OS.
     boot
 }
