feat(memory): implementa la gestione della memoria con kmalloc e kfree

--- a/my-os/Makefile
+++ b/my-os/Makefile
@@ -21,7 +21,8 @@ GDT_OBJ = build/gdt.o
 PIC_OBJ = build/pic.o
 TIMER_OBJ = build/timer.o
 SCHEDULER_OBJ = build/scheduler.o
-OBJS = $(BOOT_OBJ) $(KERNEL_OBJ) $(IDT_OBJ) $(GDT_OBJ) $(PIC_OBJ) $(TIMER_OBJ) $(SCHEDULER_OBJ)
+MEMORY_OBJ = build/memory.o
+OBJS = $(BOOT_OBJ) $(KERNEL_OBJ) $(IDT_OBJ) $(GDT_OBJ) $(PIC_OBJ) $(TIMER_OBJ) $(SCHEDULER_OBJ) $(MEMORY_OBJ)
 KERNEL_BIN = build/kernel.bin
 ISO_DIR = build/isodir
 ISO_FILE = build/my-os.iso
@@ -83,5 +84,10 @@ $(TIMER_OBJ): src/timer.c
 
 # Compile the SCHEDULER file.
 $(SCHEDULER_OBJ): src/scheduler.c
+	mkdir -p build
+	$(GCC) $(GCCFLAGS) -c $< -o $@
+
+# Compile the MEMORY file.
+$(MEMORY_OBJ): src/memory.c
 	mkdir -p build
 	$(GCC) $(GCCFLAGS) -c $< -o $@
