feat(ai-loader): implement dynamic AI model loader with FAT32 integration

--- a/my-os/Makefile
+++ b/my-os/Makefile
@@ -20,6 +20,7 @@ KERNEL_MINIMAL_OBJ = build/kernel_minimal.o
 IDT_OBJ = build/idt.o
 GDT_OBJ = build/gdt.o
 FAT32_OBJ = build/fat32.o
+AI_LOADER_OBJ = build/ai_loader.o
 KERNEL_BIN = build/kernel.bin
 KERNEL_MINIMAL_BIN = build/kernel_minimal.bin
 ISO_DIR = build/isodir
